[package]
authors = ["Stefan Hagen"]
categories = ["command-line-utilities"]
description = """
Well, deeds first, then words ...
"""
edition = "2018"
homepage = "https://github.com/sthagen/thrustimate/"
keywords = ["estimate", "throughput", "plan"]
license = "MIT"
name = "stpci"
publish = false
readme = "README.md"
repository = "https://github.com/sthagen/thrustimate/"
version = "2021.10.10"

[dependencies]
chrono = "0.4.19"
rand = "0.8.4"
